# gp-midi-clock-plugin

./: CMakeLists.txt
cmake/: dependencies.cmake
src/: JK_MidiClock.cpp  JK_MidiClock.h  PluginProcessor.cpp  PluginProcessor.h
